Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-14191

setstripe: cannot create composite file: Numerical result out of range

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.14.0
    • None
    • None
    • 3
    • 9223372036854775807

      when creating a PFL file of 2K stripes, they are shrinked to 700+, because lod_get_stripe_count() checks the space left after taking given 2K stripes into account, and the total amount of stripes that fits into EA is 2700+.
          
      when creating a SEL file of 2K stipes, it fails because the extension component is also taking into account despite the fact it is never initialised and due to the above logic 2x2k stripes leaves no space in EA.
       
      [root@vm71 wc-main]# ./lustre/utils/lfs setstripe --stripe-size 1M --component-end 2000M --overstripe-count 2000 /mnt/lustre/file1
      [root@vm71 wc-main]# ./lustre/utils/lfs getstripe  /mnt/lustre/file1
      /mnt/lustre/file1
        lcm_layout_gen:    1
        lcm_mirror_count:  1
        lcm_entry_count:   1
          lcme_id:             1
          lcme_mirror_id:      0
          lcme_flags:          init
          lcme_extent.e_start: 0
          lcme_extent.e_end:   2097152000
            lmm_stripe_count:  722
            lmm_stripe_size:   1048576
            lmm_pattern:       raid0,overstriped
            lmm_layout_gen:    0
            lmm_stripe_offset: 0
            lmm_objects:
       
       
      [root@vm71 wc-main]# ./lustre/utils/lfs setstripe --stripe-size 1M --component-end 2000M --overstripe-count 2000 -z 64M /mnt/lustre/file2
      lt-lfs setstripe: cannot create composite file '/mnt/lustre/file2': Numerical result out of range

      [root@vm71 wc-main]# ./lustre/utils/lfs setstripe --stripe-size 1M --component-end 2000M --overstripe-count 1360  /mnt/lustre/file3
      [root@vm71 wc-main]# ./lustre/utils/lfs getstripe  /mnt/lustre/file3
      /mnt/lustre/file3
        lcm_layout_gen:    1
        lcm_mirror_count:  1
        lcm_entry_count:   1
          lcme_id:             1
          lcme_mirror_id:      0
          lcme_flags:          init
          lcme_extent.e_start: 0
          lcme_extent.e_end:   2097152000
            lmm_stripe_count:  1360
            lmm_stripe_size:   1048576
            lmm_pattern:       raid0,overstriped
            lmm_layout_gen:    0
            lmm_stripe_offset: 1
            lmm_objects:

            vitaly_fertman Vitaly Fertman
            vitaly_fertman Vitaly Fertman
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: